--- a/lab1-6/PS_40_Angel/UI-Project/View/Windows/LoggerWindow.xaml
+++ b/lab1-6/PS_40_Angel/UI-Project/View/Windows/LoggerWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="UI_Project.Windows.LoggerWindow"
+﻿<Window x:Class="UI_Project.View.Windows.LoggerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:UI_Project.Windows"
+        xmlns:local="clr-namespace:UI_Project.View.Windows"
         mc:Ignorable="d"
         Title="LoggerWindow" Height="450" Width="800">
     <Grid>
